--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -15,7 +15,7 @@ stages:
     cfOrg: "depdev"
     cfSpace: "dev"
     cfAppName: "cicd"
-    cfCredentialsId: "cfdeploy"
+    cfCredentialsId: "deploy-to-cf"
     deployType: "standard"
     npmExecuteEndToEndTests: false
   Compliance:
@@ -26,7 +26,7 @@ stages:
     cfOrg: "depdev"
     cfSpace: "dev"
     cfAppName: "cicd"
-    cfCredentialsId: "cfdeploy"
+    cfCredentialsId: "deploy-to-cf"
     deployType: "standard"
     tmsUpload: false
 steps:
