--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -28,7 +28,7 @@ stages:
     cfAppName: "cicd"
     cfCredentialsId: "deploy-to-cf"
     deployType: "standard"
-    tmsUpload: false
+    tmsUpload: true
 steps:
   artifactPrepareVersion:
     versioningType: "cloud_noTag"
