--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -21,7 +21,11 @@ stages:
     deployType: "standard"
     npmExecuteEndToEndTests: false
   Compliance:
-    sonarExecuteScan: false
+    sonarExecuteScan: true
+    hostUrl : https://sonarcloud.io
+    organization : phanisree29
+    projectkey: phanisree29
+    sonarCredentials : sonar
   Release:
     cloudFoundryDeploy: true
     cfApiEndpoint: "https://api.cf.us10-001.hana.ondemand.com"
