--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -22,10 +22,10 @@ stages:
     npmExecuteEndToEndTests: false
   Compliance:
     sonarExecuteScan: true
-    hostUrl : https://sonarcloud.io
-    organization : phanisree29
-    projectkey: phanisree29
-    sonarCredentials : sonar
+    hostUrl : "https://sonarcloud.io"
+    organization : "phanisree29"
+    projectkey: "phanisree29"
+    sonarCredentials : "sonar"
   Release:
     cloudFoundryDeploy: true
     cfApiEndpoint: "https://api.cf.us10-001.hana.ondemand.com"
