--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -9,6 +9,8 @@ stages:
     npmExecuteLint: false
   Additional Unit Tests:
     npmExecuteScripts: true
+    runScripts:
+      - "test:odata"
   Acceptance:
     cloudFoundryDeploy: false
     cfApiEndpoint: "https://api.cf.us10-001.hana.ondemand.com"
